# Facial-Emotion-Recognition-for-Mental-Wellness-Monitoring

./: Dockerfile  FER_Mental_Wellness.ipynb  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
